cmake_minimum_required(VERSION 2.8.11)

INCLUDE_DIRECTORIES(include)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ./lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ./lib)
file(GLOB SOURCES source/*.cpp)

add_library(NyraEmulationSystem ${SOURCES})


FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ./python)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ./python)
set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR}/python)

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(swig/nes.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(nes python swig/nes.i swig/nesPYTHON_wrap.cxx)
SWIG_LINK_LIBRARIES(nes NyraEmulationSystem ${PYTHON_LIBRARIES})

